Bug fix about sidebar and content divs overflowing their container

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -42,6 +42,7 @@ body
 	margin: auto ;
 	margin-bottom: $footer-height ;
 	display: table ;
+	table-layout: fixed ;
 	
 	@media #{$medium-only} {max-width: 56em;}
 	@media #{$large-only} {max-width: 76em;}
